--- a/challenge-oracle-decoder-esp-main/index.html
+++ b/challenge-oracle-decoder-esp-main/index.html
@@ -3,42 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Encriptador de frases</title>
+    <!DOCTYPE html>
+    <html lang="pt-br">
+      <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Encriptador de Frase</title>
+        <link rel="stylesheet" href="/css/styles.css" />
+        <!-- CSS only -->
+        <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous"
+        />
+        <!-- JavaScript Bundle with Popper -->
+        <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+          crossorigin="anonymous"
+        ></script>
+      </head>
+      <body>
+        <div class="container col-6 border border-3 rounded-3">
+          <h1>Código secreto</h1>
+          <h3>Frase a Encriptar</h3>
+          <label for="input-texto">Solo letras minúsculas, sin acento</label>
+          <div class="input-group mb-3">
+            <button class="btn btn-outline-secondary" type="submit">
+              Encriptar
+            </button>
+            <button class="btn btn-outline-secondary" type="submit">
+              Desencriptar
+            </button>
+            <input
+              type="text"
+              class="form-control"
+              placeholder=""
+              aria-label="Example text with two button addons"
+            />
+          </div>
+          <h3>Frase Encriptada</h3>
+          <div class="input-group mb-3">
+            <button
+              class="btn btn-outline-secondary"
+              type="submit"
+              id="button-addon1"
+            >
+              Copiar
+            </button>
+            <input
+              type="text"
+              class="form-control"
+              placeholder=""
+              aria-label="Example text with button addon"
+              aria-describedby="button-addon1"
+            />
+          </div>
+        </div>
+        <script src="/js/script.js"></script>
+      </body>
+    </html>
   </head>
-  <body>
-    <h1>Código secreto</h1>
-    <main class="main">
-      <section class="form">
-        <form action="">
-          <label for="texto"
-            >Ingrese solo letras minusculas, sin caracteres especiales</label
-          >
-          <input
-            type="text"
-            name="texto"
-            id="texto"
-            placeholder="Ingrese el texto aquí"
-          />
-          <input type="submit" value="encriptar" id="boton-encriptar" />
-          <input type="submit" value="desencriptar" id="boton-desencriptar" />
-        </form>
-      </section>
-    </main>
-
-    <section class="encriptado">
-      <h2>Mensaje desencritado</h2>
-      <input type="text" name="encriptado" id="encriptado" />
-      <input type="submit" value="copiar" id="boton-copiar" />
-    </section>
-
-    <section class="footer">
-      <footer>
-        <div>Andrés Alexis Bozzani</div>
-      </footer>
-    </section>
-
-    <script src="./script.js"></script>
-  </body>
 </html>
