--- a/challenge-oracle-decoder-esp-main/index.html
+++ b/challenge-oracle-decoder-esp-main/index.html
@@ -10,7 +10,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Encriptador de Frase</title>
-        <link rel="stylesheet" href="/css/styles.css" />
+        <link rel="stylesheet" href="css/styles.css">
         <!-- CSS only -->
         <link
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -26,22 +26,23 @@
         ></script>
       </head>
       <body>
-        <div class="container col-6 border border-3 rounded-3">
-          <h1>Código secreto</h1>
+        <main>
+        <div class="container col border border-3 rounded-3 mt-5 bg-light">
+          <h1 class="text-center">Código secreto</h1>
           <h3>Frase a Encriptar</h3>
           <label for="input-texto">Solo letras minúsculas, sin acento</label>
           <div class="input-group mb-3">
-            <button class="btn btn-outline-secondary" type="submit">
+            <button id="botonEncriptar" class="btn btn-outline-secondary" type="button">
               Encriptar
             </button>
             <button class="btn btn-outline-secondary" type="submit">
               Desencriptar
             </button>
             <input
+              id="inputText"
               type="text"
               class="form-control"
-              placeholder=""
-              aria-label="Example text with two button addons"
+              placeholder="Ingrese aquí la frase a Encriptar"              
             />
           </div>
           <h3>Frase Encriptada</h3>
@@ -61,8 +62,16 @@
               aria-describedby="button-addon1"
             />
           </div>
+        </main>
+          <footer>
+            <div
+              class="fixed-bottom text-center border border-top-2 p-2 bg-light"
+            >
+              <p>Copyright © 2019, All Right Reserved Andrés Alexis Bozzani</p>
+            </div>
+          </footer>
         </div>
-        <script src="/js/script.js"></script>
+        <script src="js/script.js"></script>
       </body>
     </html>
   </head>
