Logica de encriptado y desencriptado terminada

--- a/challenge-oracle-decoder-esp-main/index.html
+++ b/challenge-oracle-decoder-esp-main/index.html
@@ -35,7 +35,7 @@
             <button id="botonEncriptar" class="btn btn-outline-secondary" type="button">
               Encriptar
             </button>
-            <button class="btn btn-outline-secondary" type="submit">
+            <button id="botonDesencriptar" class="btn btn-outline-secondary" type="submit">
               Desencriptar
             </button>
             <input
@@ -55,6 +55,7 @@
               Copiar
             </button>
             <input
+              id="textoEncriptado"
               type="text"
               class="form-control"
               placeholder=""
