Proceso de encriptado y boton copiar terminado

--- a/challenge-oracle-decoder-esp-main/index.html
+++ b/challenge-oracle-decoder-esp-main/index.html
@@ -50,15 +50,16 @@
             <button
               class="btn btn-outline-secondary"
               type="submit"
-              id="button-addon1"
+              id="copiar"  
+              onclick="copiarTexto()"            
             >
               Copiar
             </button>
             <input
-              id="textoEncriptado"
+              id="textoProcesado"
               type="text"
               class="form-control"
-              placeholder=""
+              placeholder="Aquí va el texto procesado"
               aria-label="Example text with button addon"
               aria-describedby="button-addon1"
             />
